--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@primeng/themes": "^19.0.1",
+    "@types/leaflet": "^1.9.15",
     "axios": "^1.7.9",
+    "leaflet": "^1.9.4",
     "primeng": "^19.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
