--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/leaflet": "^1.9.15",
     "axios": "^1.7.9",
     "leaflet": "^1.9.4",
+    "primeicons": "^7.0.0",
     "primeng": "^19.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
